@@ -10,6 +10,9 @@
   the release of GNOME &oldversion;:
     <itemizedlist>
       <listitem>
+	<para>Shaun McCance (yelp)</para>
+      </listitem>
+      <listitem>
 	<para>Marco Pesenti (epiphany)</para>
       </listitem>
    <listitem>
