@@ -1,3 +1,11 @@
+2003-09-07 John Fleck <jfleck@inkstain.net>
+
+	* rncontrolcenter.xml
+	* rnnewmaintainers.xml
+	* rnthanks
+	add fontilus, more thanks, and how could I have
+	forgotten shaunm in the new maintainers list!
+	
 2003-09-08  Danilo Šegan  <dsegan@gmx.net>
 
 	* rni18n.xml: Corrected number of Portuguese speakers.
